tests/derive/arg_missing_metavar.stderr
error[E0277]: the trait bound `Complicated: Default` is not satisfied
 --> tests/derive/arg_missing_metavar.rs:7:10
  |
7 | #[derive(Arguments)]
  |          ^^^^^^^^^ the trait `Default` is not implemented for `Complicated`
  |
  = note: this error originates in the derive macro `Arguments` (in Nightly builds, run with -Z macro-backtrace for more info)
help: consider annotating `Complicated` with `#[derive(Default)]`
  |
3 + #[derive(Default)]
4 | struct Complicated {
  |
